# dfns-sdk-rs-examples

./: .gitattributes  Cargo.toml  README.md
examples/auth/: activate_application.rs  activate_credential.rs  activate_personal_access_token.rs  activate_service_account.rs  activate_user.rs  archive_application.rs  archive_credential.rs  archive_personal_access_token.rs  archive_service_account.rs  archive_user.rs  create_credential_challenge.rs  create_credential_code.rs  create_credential_with_code.rs  create_delegated_recovery_challenge.rs  create_delegated_registration_challenge.rs  create_login_challenge.rs  create_personal_access_token.rs  create_recovery_challenge.rs  create_registration_challenge.rs  create_service_account.rs  create_service_account_challenge.rs  create_user.rs  create_user_action_challenge.rs  create_user_action_signature.rs  deactivate_application.rs  deactivate_credential.rs  deactivate_personal_access_token.rs  deactivate_service_account.rs  deactivate_user.rs  delegate_credential.rs  get_application.rs  get_credential.rs  get_personal_access_token.rs  get_service_account.rs  get_user.rs  initiate_challenge.rs  list_applications.rs  list_credentials.rs  list_personal_access_tokens.rs  login.rs  (+14 more)
examples/exchanges/: create_deposit.rs  create_exchange.rs  create_withdrawal.rs  delete_exchange.rs  get_exchange.rs  list_account_assets.rs  list_accounts.rs  list_asset_withdrawal_networks.rs  list_exchanges.rs
examples/networks/: get_fees.rs  read_contract.rs
examples/permissions/: archive_permission.rs  create_assignment.rs  create_permission.rs  delete_assignment.rs  get_permission.rs  list_assignments.rs  list_permissions.rs  update_permission.rs
examples/policies/: archive_policy.rs  create_approval_decision.rs  create_policy.rs  get_approval.rs  get_policy.rs  list_approvals.rs  list_policies.rs  update_policy.rs
examples/signers/: list_signers.rs
examples/staking/: create_stake.rs  create_stake_action.rs  get_stake_rewards.rs  list_stake_actions.rs  list_stakes.rs
examples/wallets/: broadcast_transaction.rs  create_wallet.rs  delegate_wallet.rs  export_wallet.rs  generate_signature.rs  get_signature.rs  get_transaction.rs  get_transfer.rs  get_wallet.rs  get_wallet_assets.rs  get_wallet_history.rs  get_wallet_nfts.rs  import_wallet.rs  list_signatures.rs  list_transactions.rs  list_transfers.rs  list_wallets.rs  tag_wallet.rs  transfer_asset.rs  untag_wallet.rs  update_wallet.rs
examples/webhooks/: create_webhook.rs  delete_webhook.rs  get_webhook.rs  get_webhook_event.rs  list_webhook_events.rs  list_webhooks.rs  ping_webhook.rs  update_webhook.rs
src/: main.rs
