[package]
name = "dfns-sdk-rs-examples"
version = "0.1.0"
edition = "2024"

[[example]]
name = "list_wallets"
path = "examples/wallets/list_wallets.rs"

[[example]]
name = "create_wallet"
path = "examples/wallets/create_wallet.rs"

[[example]]
name = "get_wallet"
path = "examples/wallets/get_wallet.rs"

[[example]]
name = "update_wallet"
path = "examples/wallets/update_wallet.rs"

[[example]]
name = "tag_wallet"
path = "examples/wallets/tag_wallet.rs"

[[example]]
name = "untag_wallet"
path = "examples/wallets/untag_wallet.rs"

[[example]]
name = "get_wallet_assets"
path = "examples/wallets/get_wallet_assets.rs"

[[example]]
name = "get_wallet_history"
path = "examples/wallets/get_wallet_history.rs"

[[example]]
name = "get_wallet_nfts"
path = "examples/wallets/get_wallet_nfts.rs"

[[example]]
name = "transfer_asset"
path = "examples/wallets/transfer_asset.rs"

[[example]]
name = "broadcast_transaction"
path = "examples/wallets/broadcast_transaction.rs"

[[example]]
name = "generate_signature"
path = "examples/wallets/generate_signature.rs"

[[example]]
name = "get_signature"
path = "examples/wallets/get_signature.rs"

[[example]]
name = "list_signatures"
path = "examples/wallets/list_signatures.rs"

[[example]]
name = "get_transaction"
path = "examples/wallets/get_transaction.rs"

[[example]]
name = "list_transactions"
path = "examples/wallets/list_transactions.rs"

[[example]]
name = "get_transfer"
path = "examples/wallets/get_transfer.rs"

[[example]]
name = "list_transfers"
path = "examples/wallets/list_transfers.rs"

[[example]]
name = "export_wallet"
path = "examples/wallets/export_wallet.rs"

[[example]]
name = "import_wallet"
path = "examples/wallets/import_wallet.rs"

[[example]]
name = "delegate_wallet"
path = "examples/wallets/delegate_wallet.rs"

[[example]]
name = "create_webhook"
path = "examples/webhooks/create_webhook.rs"

[[example]]
name = "get_webhook"
path = "examples/webhooks/get_webhook.rs"

[[example]]
name = "update_webhook"
path = "examples/webhooks/update_webhook.rs"

[[example]]
name = "delete_webhook"
path = "examples/webhooks/delete_webhook.rs"

[[example]]
name = "list_webhooks"
path = "examples/webhooks/list_webhooks.rs"

[[example]]
name = "ping_webhook"
path = "examples/webhooks/ping_webhook.rs"

[[example]]
name = "get_webhook_event"
path = "examples/webhooks/get_webhook_event.rs"

[[example]]
name = "list_webhook_events"
path = "examples/webhooks/list_webhook_events.rs"

[[example]]
name = "create_stake"
path = "examples/staking/create_stake.rs"

[[example]]
name = "create_stake_action"
path = "examples/staking/create_stake_action.rs"

[[example]]
name = "get_stake_rewards"
path = "examples/staking/get_stake_rewards.rs"

[[example]]
name = "list_stake_actions"
path = "examples/staking/list_stake_actions.rs"

[[example]]
name = "list_stakes"
path = "examples/staking/list_stakes.rs"

[[example]]
name = "list_signers"
path = "examples/signers/list_signers.rs"

[dependencies]
dfns-sdk-rs = { version = "0.1.0" }
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 