[package]
name = "dfns-sdk-rs-examples"
version = "0.1.0"
edition = "2024"

[[example]]
name = "list_wallets"
path = "examples/wallets/list_wallets.rs"

[[example]]
name = "create_wallet"
path = "examples/wallets/create_wallet.rs"

[[example]]
name = "get_wallet"
path = "examples/wallets/get_wallet.rs"

[[example]]
name = "update_wallet"
path = "examples/wallets/update_wallet.rs"

[[example]]
name = "tag_wallet"
path = "examples/wallets/tag_wallet.rs"

[[example]]
name = "untag_wallet"
path = "examples/wallets/untag_wallet.rs"

[[example]]
name = "get_wallet_assets"
path = "examples/wallets/get_wallet_assets.rs"

[[example]]
name = "get_wallet_history"
path = "examples/wallets/get_wallet_history.rs"

[[example]]
name = "get_wallet_nfts"
path = "examples/wallets/get_wallet_nfts.rs"

[[example]]
name = "transfer_asset"
path = "examples/wallets/transfer_asset.rs"

[[example]]
name = "broadcast_transaction"
path = "examples/wallets/broadcast_transaction.rs"

[[example]]
name = "generate_signature"
path = "examples/wallets/generate_signature.rs"

[[example]]
name = "get_signature"
path = "examples/wallets/get_signature.rs"

[[example]]
name = "list_signatures"
path = "examples/wallets/list_signatures.rs"

[[example]]
name = "get_transaction"
path = "examples/wallets/get_transaction.rs"

[[example]]
name = "list_transactions"
path = "examples/wallets/list_transactions.rs"

[[example]]
name = "get_transfer"
path = "examples/wallets/get_transfer.rs"

[[example]]
name = "list_transfers"
path = "examples/wallets/list_transfers.rs"

[[example]]
name = "export_wallet"
path = "examples/wallets/export_wallet.rs"

[[example]]
name = "import_wallet"
path = "examples/wallets/import_wallet.rs"

[[example]]
name = "delegate_wallet"
path = "examples/wallets/delegate_wallet.rs"

[[example]]
name = "create_webhook"
path = "examples/webhooks/create_webhook.rs"

[[example]]
name = "get_webhook"
path = "examples/webhooks/get_webhook.rs"

[[example]]
name = "update_webhook"
path = "examples/webhooks/update_webhook.rs"

[[example]]
name = "delete_webhook"
path = "examples/webhooks/delete_webhook.rs"

[[example]]
name = "list_webhooks"
path = "examples/webhooks/list_webhooks.rs"

[[example]]
name = "ping_webhook"
path = "examples/webhooks/ping_webhook.rs"

[[example]]
name = "get_webhook_event"
path = "examples/webhooks/get_webhook_event.rs"

[[example]]
name = "list_webhook_events"
path = "examples/webhooks/list_webhook_events.rs"

[[example]]
name = "create_stake"
path = "examples/staking/create_stake.rs"

[[example]]
name = "create_stake_action"
path = "examples/staking/create_stake_action.rs"

[[example]]
name = "get_stake_rewards"
path = "examples/staking/get_stake_rewards.rs"

[[example]]
name = "list_stake_actions"
path = "examples/staking/list_stake_actions.rs"

[[example]]
name = "list_stakes"
path = "examples/staking/list_stakes.rs"

[[example]]
name = "list_signers"
path = "examples/signers/list_signers.rs"

[[example]]
name = "archive_policy"
path = "examples/policies/archive_policy.rs"

[[example]]
name = "create_approval_decision"
path = "examples/policies/create_approval_decision.rs"

[[example]]
name = "create_policy"
path = "examples/policies/create_policy.rs"

[[example]]
name = "get_approval"
path = "examples/policies/get_approval.rs"

[[example]]
name = "get_policy"
path = "examples/policies/get_policy.rs"

[[example]]
name = "list_approvals"
path = "examples/policies/list_approvals.rs"

[[example]]
name = "list_policies"
path = "examples/policies/list_policies.rs"

[[example]]
name = "update_policy"
path = "examples/policies/update_policy.rs"

[[example]]
name = "archive_permission"
path = "examples/permissions/archive_permission.rs"

[[example]]
name = "create_assignment"
path = "examples/permissions/create_assignment.rs"

[[example]]
name = "create_permission"
path = "examples/permissions/create_permission.rs"

[[example]]
name = "delete_assignment"
path = "examples/permissions/delete_assignment.rs"

[[example]]
name = "get_permission"
path = "examples/permissions/get_permission.rs"

[[example]]
name = "list_assignments"
path = "examples/permissions/list_assignments.rs"

[[example]]
name = "list_permissions"
path = "examples/permissions/list_permissions.rs"

[[example]]
name = "update_permission"
path = "examples/permissions/update_permission.rs"

[[example]]
name = "get_fees"
path = "examples/networks/get_fees.rs"

[[example]]
name = "read_contract"
path = "examples/networks/read_contract.rs"

[[example]]
name = "create_deposit"
path = "examples/exchanges/create_deposit.rs"

[[example]]
name = "create_exchange"
path = "examples/exchanges/create_exchange.rs"

[[example]]
name = "create_withdrawal"
path = "examples/exchanges/create_withdrawal.rs"

[[example]]
name = "delete_exchange"
path = "examples/exchanges/delete_exchange.rs"

[[example]]
name = "get_exchange"
path = "examples/exchanges/get_exchange.rs"

[[example]]
name = "list_account_assets"
path = "examples/exchanges/list_account_assets.rs"

[[example]]
name = "list_accounts"
path = "examples/exchanges/list_accounts.rs"

[[example]]
name = "list_asset_withdrawal_networks"
path = "examples/exchanges/list_asset_withdrawal_networks.rs"

[[example]]
name = "list_exchanges"
path = "examples/exchanges/list_exchanges.rs"

[[example]]
name = "create_user_action_signature"
path = "examples/auth/create_user_action_signature.rs"

[[example]]
name = "recreate_delegated_registration_challenge"
path = "examples/auth/recreate_delegated_registration_challenge.rs"

[[example]]
name = "register_end_user"
path = "examples/auth/register_end_user.rs"

[[example]]
name = "update_application"
path = "examples/auth/update_application.rs"

[[example]]
name = "activate_application"
path = "examples/auth/activate_application.rs"

[[example]]
name = "activate_credential"
path = "examples/auth/activate_credential.rs"

[[example]]
name = "activate_personal_access_token"
path = "examples/auth/activate_personal_access_token.rs"

[[example]]
name = "activate_service_account"
path = "examples/auth/activate_service_account.rs"

[[example]]
name = "activate_user"
path = "examples/auth/activate_user.rs"

[[example]]
name = "archive_application"
path = "examples/auth/archive_application.rs"

[[example]]
name = "archive_personal_access_token"
path = "examples/auth/archive_personal_access_token.rs"

[[example]]
name = "archive_service_account"
path = "examples/auth/archive_service_account.rs"

[[example]]
name = "archive_user"
path = "examples/auth/archive_user.rs"

[[example]]
name = "create_credential_challenge"
path = "examples/auth/create_credential_challenge.rs"

[[example]]
name = "create_credential_code"
path = "examples/auth/create_credential_code.rs"

[[example]]
name = "create_credential_with_code"
path = "examples/auth/create_credential_with_code.rs"

[[example]]
name = "create_delegated_recovery_challenge"
path = "examples/auth/create_delegated_recovery_challenge.rs"

[[example]]
name = "create_delegated_registration_challenge"
path = "examples/auth/create_delegated_registration_challenge.rs"

[[example]]
name = "create_login_challenge"
path = "examples/auth/create_login_challenge.rs"

[[example]]
name = "create_personal_access_token"
path = "examples/auth/create_personal_access_token.rs"

[[example]]
name = "create_recovery_challenge"
path = "examples/auth/create_recovery_challenge.rs"

[[example]]
name = "create_registration_challenge"
path = "examples/auth/create_registration_challenge.rs"

[[example]]
name = "create_service_account"
path = "examples/auth/create_service_account.rs"

[[example]]
name = "create_user"
path = "examples/auth/create_user.rs"

[[example]]
name = "create_user_action_challenge"
path = "examples/auth/create_user_action_challenge.rs"

[[example]]
name = "deactivate_application"
path = "examples/auth/deactivate_application.rs"

[[example]]
name = "deactivate_credential"
path = "examples/auth/deactivate_credential.rs"

[[example]]
name = "deactivate_personal_access_token"
path = "examples/auth/deactivate_personal_access_token.rs"

[[example]]
name = "deactivate_service_account"
path = "examples/auth/deactivate_service_account.rs"

[[example]]
name = "deactivate_user"
path = "examples/auth/deactivate_user.rs"

[[example]]
name = "get_application"
path = "examples/auth/get_application.rs"

[[example]]
name = "get_personal_access_token"
path = "examples/auth/get_personal_access_token.rs"

[[example]]
name = "get_service_account"
path = "examples/auth/get_service_account.rs"

[[example]]
name = "get_user"
path = "examples/auth/get_user.rs"

[[example]]
name = "list_applications"
path = "examples/auth/list_applications.rs"

[[example]]
name = "list_credentials"
path = "examples/auth/list_credentials.rs"

[[example]]
name = "list_personal_access_tokens"
path = "examples/auth/list_personal_access_tokens.rs"

[[example]]
name = "login"
path = "examples/auth/login.rs"

[[example]]
name = "recover"
path = "examples/auth/recover.rs"

[[example]]
name = "register"
path = "examples/auth/register.rs"

[[example]]
name = "register_with_recovery"
path = "examples/auth/register_with_recovery.rs"

[[example]]
name = "update_credential"
path = "examples/auth/update_credential.rs"

[[example]]
name = "update_personal_access_token"
path = "examples/auth/update_personal_access_token.rs"

[[example]]
name = "update_service_account"
path = "examples/auth/update_service_account.rs"

[[example]]
name = "verify_challenge"
path = "examples/auth/verify_challenge.rs"

[[example]]
name = "verify_recovery_challenge"
path = "examples/auth/verify_recovery_challenge.rs"

[[example]]
name = "verify_registration_challenge"
path = "examples/auth/verify_registration_challenge.rs"

[dependencies]
dfns-sdk-rs = { version = "0.1.0" }
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 